<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityDetalleContacto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textConfir"
        android:text="@string/confirmar"
        android:textStyle="bold"
        android:textSize="@dimen/textConfirm"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textNomb2"
        android:text="@string/nombre2"
        android:textSize="@dimen/tipo"
        android:layout_below="@+id/textConfir"
        android:paddingTop="@dimen/padingTop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutFecha"
        android:layout_below="@+id/textNomb2"
        android:paddingTop="@dimen/separacion">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textfecha"
            android:text="@string/fecha"
            android:textSize="@dimen/tipo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textfecha2"
            android:textSize="@dimen/tipo"
            android:text="01/01/1999"
            android:paddingLeft="@dimen/padingLeft"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutCel"
        android:layout_below="@+id/layoutFecha"
        android:paddingTop="@dimen/separacion">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/texttel"
            android:text="@string/telefono"
            android:textSize="@dimen/tipo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/texttel2"
            android:textSize="@dimen/tipo"
            android:text="55-123-456"
            android:paddingLeft="@dimen/padingLeft"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutEmail"
        android:layout_below="@+id/layoutCel"
        android:paddingTop="@dimen/separacion">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textmail"
            android:text="@string/email"
            android:textSize="@dimen/tipo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textmail2"
            android:textSize="@dimen/tipo"
            android:text="ejemplo@dominio.com"
            android:paddingLeft="@dimen/padingLeft"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutDesc"
        android:layout_below="@+id/layoutEmail"
        android:paddingTop="@dimen/separacion">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textdesc"
            android:text="@string/descrip"
            android:textSize="@dimen/tipo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textdesc2"
            android:textSize="@dimen/tipo"
            android:text="@string/lorem"
            android:paddingLeft="@dimen/padingLeft"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botonEdit"
        android:text="@string/editar"
        android:layout_below="@+id/layoutDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/separacion"
        android:clickable="true"
        android:onClick="editarDatos"/>


</RelativeLayout>
