<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blogspot.mosaicogeek.skintigth.informacioncontacto.ActivityPedirDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        >

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.blogspot.mosaicogeek.skintigth.informacioncontacto.ActivityPedirDatos">

        <android.support.design.widget.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:hint="@string/nombre"
            android:id="@+id/nombreText"
            />

    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:datePickerMode="spinner"
        android:id="@+id/datePic"
        android:calendarViewShown="false"
        android:layout_gravity="center_horizontal"
        >

    </DatePicker>

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/telefono"
        android:layout_below="@+id/datePic"
        tools:context="com.blogspot.mosaicogeek.skintigth.informacioncontacto.ActivityPedirDatos">

        <android.support.design.widget.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:id="@+id/telefonoText"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/texto3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        tools:context="com.blogspot.mosaicogeek.skintigth.informacioncontacto.ActivityPedirDatos">

        <android.support.design.widget.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/emailText"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descripcion"
        tools:context="com.blogspot.mosaicogeek.skintigth.informacioncontacto.ActivityPedirDatos">

        <android.support.design.widget.TextInputEditText
            android:layout_height="130dp"
            android:layout_width="match_parent"
            android:hint="@string/descripcion"
            android:id="@+id/descripcionText"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boton"
        android:layout_alignParentBottom="true"
        android:text="@string/siguiente"
        android:onClick="siguiente"
    />

    </LinearLayout>



</RelativeLayout>
